<resources>
    <string name="app_name">Retrofit Authorization</string>
    <string name="login">LogIn</string>
    <string name="username">Username</string>
    <string name="password">password</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="university_name">University name</string>
    <string name="graduation_year">Graduation year</string>
    <string name="cgpa">Cgpa</string>
    <string name="experience">Experience</string>
    <string name="current_work_place">Current work place</string>
    <string name="applying_position">Applying position</string>
    <string name="expected_salary">Expected salary</string>
    <string name="field_buzz_reference">field buzz reference</string>
    <string name="github_project_url">Github_project_url</string>

</resources>